force-app/main/default/objects/Log__c/fields/Error_Reasignacion__c.field-meta.xml
<CustomField>
    <fullName>Error_Reasignacion__c</fullName>
    <label>Error Reasignación</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>