force-app/main/default/objects/Log__c/fields/Fecha_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Contacto__c</fullName>
    <label>Fecha Contacto</label>
    <type>Date</type>
</CustomField>