force-app/main/default/objects/Log__c/fields/Hora_Inicio_Reasignacion__c.field-meta.xml
<CustomField>
    <fullName>Hora_Inicio_Reasignacion__c</fullName>
    <label>Hora Inicio Reasignación</label>
    <type>DateTime</type>
</CustomField>