force-app/main/default/objects/Log__c/fields/Id_Tarea__c.field-meta.xml
<CustomField>
    <fullName>Id_Tarea__c</fullName>
    <label>Id Tarea</label>
    <length>18</length>
    <type>Text</type>
</CustomField>