force-app/main/default/objects/Log__c/fields/Objeto_a_Reasignar__c.field-meta.xml
<CustomField>
    <fullName>Objeto_a_Reasignar__c</fullName>
    <label>Objeto a Reasignar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>