force-app/main/default/objects/Log__c/fields/Web_Service__c.field-meta.xml
<CustomField>
    <fullName>Web_Service__c</fullName>
    <label>Web Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>