force-app/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Body__c</columns>
    <columns>Web_Service__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>